policies/required-annotation-owner-team.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: required-annotation-owner-team
spec:
  categories:
  - DevOps Best Practices
  - Security Best Practices
  - Supply Chain Security
  criteriaLocked: true
  description: Alert on deployments missing the 'owner' or 'team' annotation
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions:
  - name: Don't alert on kube-system namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: kube-system
        label: null
    image: null
    expiration: null
  - name: Don't alert on istio-system namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: istio-system
        label: null
    image: null
    expiration: null
  isDefault: false
  lifecycleStages:
  - DEPLOY
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: 'GitOps - Required Annotation: Owner/Team'
  policySections:
  - sectionName: ''
    policyGroups:
    - fieldName: Required Annotation
      booleanOperator: OR
      negate: false
      values:
      - value: owner|team=.+
  rationale: The 'owner' or 'team' annotation should always be specified so that the
    deployment can quickly be associated with a specific user or team.
  remediation: Redeploy your service and set the 'owner' or 'team' annotation to yourself
    or your team respectively per organizational standards.
  scope: []
  severity: LOW_SEVERITY
  disabled: true
